--- a/imports/ui/pages/dashboard.html
+++ b/imports/ui/pages/dashboard.html
@@ -70,6 +70,10 @@
                 </div>
                 <div class="col-lg-4">
                   {{#if isCompanyAdmin}}
+                    
+                    {{> ProfitCenter}}
+                    {{> CostCenter}}
+                    {{> PaymentMethodsPanel}}
                     {{> ValidateWorkerRels}}
                   {{/if}}
                   
