--- a/imports/ui/pages/profile-show-page.html
+++ b/imports/ui/pages/profile-show-page.html
@@ -13,7 +13,7 @@
       
       
       {{#if firstAccess}}
-    <h2>{{_ "Complete you profile!"}}</h2>
+    <h2>{{_ "Complete your profile"}}</h2>
 
     {{> Person_edit createPersonArgs }}
     <!-- {{> Person_show_work}} -->
